<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">4K Wallpaper</string>
    <string name="error_title">Info</string>
    <string name="error_msg_server_error">Sorry, we\'re unable to get data right now. Please try again after some time.</string>
    <string name="error_msg_socket_timeout">Socket Timeout. Please try again later</string>
    <string name="error_msg_invalid_url">Invalid URL. Please try again later</string>
    <string name="error_msg_no_network">No network connection detected. Please ensure you are connected to a network source and try again.</string>
    <string name="txtcontact">About Us</string>
    <string name="txtedgesetting">Edge Wallpaper Setting</string>
    <string name="txtdouble">Double Wallpapers</string>
    <string name="txtmydownload">My Downloads</string>
    <string name="app_id">ca-app-pub-4975991316875268~4613559129</string>
    <string name="icon_desc">Ad icon</string>
    <string name="image_desc">Ad image</string>
    <string name="ad_attribution">Ad</string>
    <string name="about_disclaimer">All the wallpapers in this app are under common creative license and the credit goes to their respective owners. These images are not endorsed by any of the prospective owners , and the images are used simply for aesthetic purposes. No copyright infringement is intended, and any request to remove one of the images / logos / names will be honored . All the Images are obtained from pexels.com, pixabay.com as well as unsplash.com which are covered by the Creative Commons Zero license. That means all images are free for distribution and free for commercial use which also does not need any kind of attribution or credit.</string>
    <string name="title_material_metaphor">4K Wallpapers</string>
    <string name="title_material_bold">Live Wallpapers</string>
    <string name="title_material_motion">Double Wallpapers</string>
    <string name="title_material_shadow">4K Exclusive</string>
    <string name="title_material_auto">Auto Wallpaper Changer</string>
    <string name="title_material_edge">Edge Lighting Wallpaper</string>
    <string name="description_material_metaphor">Cool wallpapers are designed to fit your Android mobile devices.</string>
    <string name="description_material_bold">Imagine having cool video effects as background on your home screen.</string>
    <string name="description_material_motion">Decorate your home &amp; lock screen with a different Wallpaper at the same time!</string>
    <string name="description_material_shadow">The coolest 3D personalise moving Panorama wallpapers!</string>
    <string name="description_material_auto">Changes Mobile Screen Background Automatically.</string>
    <string name="description_material_edge">Make your phone screen look amazing with edge shining in multiple colors with slowly moving effects.</string>
    <string name="toast_sensor_error">Sensor not available</string>
    <string name="toast_failed_launch_wallpaper_chooser">Cannot open wallpaper selection interface. Please manually set 4EverPics as your wallpaper on the home screen</string>
    <string name="toast_unexpected_error">Unexpected error</string>
    <string name="permission_title_rationale">Permission needed</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files.</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">OK</string>
    <string name="label_select_picture">Select Picture</string>
    <string name="toast_cannot_retrieve_cropped_image">Cannot retrieve cropped image</string>
    <string name="toast_cannot_retrieve_selected_image">Cannot retrieve selected image</string>
    <string name="toast_set_image">Save Image Successfully</string>
    <string name="file_provider_authorities">macro.hd.wallpapers.provider</string>
    <string name="reward_text">Remove Ads By Watching Video Ads.you\'ll Get 20 Mins
Of Additional Ad Free Version Of App For Every Video You Watch!\n\nSupport Devloper By Buying The Pro Version If Possible (To Buy Pro Version Click \'REMOVE ADS\' Button Below)
.To Know More About Features That Pro Version Unlocks, Go To About Section Of The App.\n\nThank You!</string>
    <string name="not_working">If you are having problems like wallpaper not Moving or removing itself, then follow below steps. \n-> Go to Recent Menu by clicking Menu Button from Phone\'s Navigation Buttons\n-> Tap and Hold on App\n-> click on Lock Button as shown below. \nNote: If this setting not available in your phone, then click for more detail and follow step 2 and step 3</string>
    <string name="pref_key_transition_time" translatable="false">pref_key_transition_time</string>
    <string name="status1_title">WhatsApp Status</string>
    <string name="status1_msg">View Status that you would like to save on mobile</string>
    <string name="status2_title">Status Downloader</string>
    <string name="status2_msg">This shows all your viewed status</string>
    <string name="status3_title">Status Preview</string>
    <string name="status3_msg">You can Share, Repost, Download and set as wallpaper</string>
    <string name="preview_loading">Loading Preview...</string>
    <string name="menu_home">Home</string>
    <string name="setas">Set as:</string>
    <string name="set_as_home">Set as Home</string>
    <string name="set_as_lock">Set as Lock</string>
    <string name="set_as_home_lock"><![CDATA[set as home & lock]]></string>
    <string name="system_default">System Default</string>
    <string name="menu_edge_lighting">Edge Lighting Wallpaper</string>
    <string name="menu_favourite">My Favourites</string>
    <string name="menu_downloads">My Downloads</string>
    <string name="menu_gradient">Gradient Wallpaper</string>
    <string name="menu_exclusive">Exclusive Wallpaper</string>
    <string name="menu_auto_wallpaper">Auto Wallpaper Changer</string>
    <string name="menu_more_option">More Option</string>
    <string name="menu_wallpaper_not_working">Live Wallpaper Not Working?</string>
    <string name="menu_theme_text">Theme</string>
    <string name="menu_remove_ads">Remove Ads</string>
    <string name="menu_share">Share</string>
    <string name="menu_rate_us">Rate us</string>
    <string name="menu_double_wallpaper">Double Wallpaper</string>
    <string name="menu_feedback">Support</string>
    <string name="menu_policy">Privacy Policy</string>
    <string name="menu_app_tour">App Tour</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_wallpaper_not_working_sub">If Live/Auto/Exclusive wallpaper removed automatically after sometime than follow these steps.</string>
    <string name="uninstall_title">Uninstall Old Application</string>
    <string name="uninstall_msg">Please UnInstall old 4K Wallpaper to continue with New App. We have migrate old data to this application.</string>
    <string name="uninstall_btn">UnInstall</string>
    <string name="purchase_title">Purchase Successfully</string>
    <string name="purchase_msg">Congratulation, You got unlimited access to all wallpapers and disable all ads lifetimes.</string>
    <string name="purchase_fail_title">Purchase Failed</string>
    <string name="purchase_fail_msg">Try again later for restore purchase.</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_system_default">System default</string>
    <string name="label_apply">Apply</string>
    <string name="download_text">Downloading...</string>
    <string name="download_unable">Unable to download</string>
    <string name="dialog_Settind_double_Wallpaper">Setting Double Wallpaper...</string>
    <string name="dialog_loading_double_Wallpaper">Loading More Data...</string>
    <string name="wallpaper_updated">Wallpaper Updated!</string>
    <string name="no_internet_connected">No internet connected.</string>
    <string name="no_data_available">No data available. Pls try later.</string>
    <string name="stock_category">Stock Categories</string>
    <string name="stock_color">Colors</string>
    <string name="other_category">Other Categories</string>
    <string name="time_interval">Time Interval : </string>
    <string name="select_categories">Select Categories</string>
    <string name="download_2_wallpaper">Download atleast 2 or more Wallpapers to set auto wallpaper changer.</string>
    <string name="set_auto_Wallpaper">Set Auto Wallpaper Changer</string>
    <string name="version_contact">Version XX.XX</string>
    <string name="disclaimer_txt">Disclaimer</string>
    <string name="termofuse">Terms of use</string>
    <string name="preview_and_set">Preview and Set Wallpaper</string>
    <string name="applying_theme">Applying Theme</string>
    <string name="install_app">Install App</string>
    <string name="move_phone">Move Phone for Panorama effect</string>
    <string name="reward_video_ad">Rewarded Video Ad</string>
    <string name="i_like_ads">I LIKE ADS</string>
    <string name="remove_ads">REMOVE ADS</string>
    <string name="image_visibility_text">Image visibility on home screen</string>
    <string name="desaturation_home_text">Desaturation on home screen</string>
    <string name="select_background">Select Background Image</string>
    <string name="notch_width">Notch width</string>
    <string name="notch_height">Notch height</string>
    <string name="notch_radius">Notch radius top</string>
    <string name="notch_b_radius">Notch radius bottom</string>
    <string name="bottom_fullness">Notch bottom fullness</string>
    <string name="deactivate_border">Deactive Border</string>
    <string name="cycle_speed">Cycle Speed</string>
    <string name="border_size">Border Size</string>
    <string name="border_b_radius">Border radius bottom</string>
    <string name="border_top_radius">Border radius top</string>
    <string name="select_border">Select Border</string>
    <string name="simple_line">Simple Line</string>
    <string name="dash_line">Dash Line</string>
    <string name="show_notch_Setting">Show notch setting</string>
    <string name="backimg">Background Image</string>
    <string name="notch">Notch</string>
    <string name="delete_note">Note: To Delete photo long click on photo</string>
    <string name="noCompData">No Campaign data available. pls try later.</string>
    <string name="noDataAvail">No data available. pls select other category.</string>
    <string name="free_hd_wallpaper">Free HD Wallpapers</string>
    <string name="set_double">Set Double Wallpaper</string>
    <string name="set_text">Set</string>
    <string name="search_text">Search</string>
    <string name="filter_text">Filter</string>
    <string name="delete_wallpaper_title">Delete Wallpaper</string>
    <string name="delete_msg">Are you sure want to delete?</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_view">View</string>
    <string name="label_set_as">Set As Wallpaper</string>
    <string name="label_delete">Delete</string>
    <string name="label_share">Share</string>
    <string name="settings_label">Settings</string>
    <string name="label_language">Language</string>
    <string name="payment_card_terms" translatable="false">Terms &amp; Conditions</string>
    <string name="payment_card_policies" translatable="false">Privacy Policies</string>
    <string name="payment_card_price" translatable="false">Enjoy a 3 Day Free Trial - Then [price] / [period]</string>
    <string name="payment_card_purchase" translatable="false">Continue without ads</string>
    <string name="payment_card_continue" translatable="false"><u>Continue with ads</u></string>
    <string name="payment_card_advantages" translatable="false">· Unlock all wallpapers\n· Get rid of ads\n· Get fresh new content every month</string>
    <string name="payment_card_title" translatable="false">Enjoy the full experience</string>
</resources>