<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="@dimen/dialog_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloobhai"
            android:text="@string/reward_video_ad"
            android:textColor="@color/dialog_title_color"
            android:textSize="22sp"
            android:visibility="visible" />

        <!--<ScrollView android:layout_marginTop="@dimen/dialog_margin_top"-->
            <!--android:layout_width="match_parent" android:layout_weight="1"-->
            <!--android:layout_height="0dp">-->

        <TextView
            android:id="@+id/txt_dialog_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_margin_top"
            android:fontFamily="@font/baloobhai"
            android:text="@string/reward_text"
            android:textColor="@color/dialog_title_color"
            android:textSize="13sp"
            android:visibility="visible" />
        <!--</ScrollView>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/dialog_margin_top"
            android:gravity="right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/btn_like_ads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:fontFamily="@font/baloobhai"
                android:paddingLeft="@dimen/dialog_padding_left_right"
                android:paddingTop="@dimen/dialog_padding_top_bottom"
                android:paddingRight="@dimen/dialog_padding_left_right"
                android:paddingBottom="@dimen/dialog_padding_top_bottom"
                android:text="@string/i_like_ads"
                android:textColor="#03844E"
                android:textSize="@dimen/dialog_button_size"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/btn_remove_Ad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:fontFamily="@font/baloobhai"
                android:paddingLeft="@dimen/dialog_padding_left_right"
                android:paddingTop="@dimen/dialog_padding_top_bottom"
                android:paddingRight="@dimen/dialog_padding_left_right"
                android:paddingBottom="@dimen/dialog_padding_top_bottom"
                android:text="@string/remove_ads"
                android:textColor="#03844E"
                android:textSize="@dimen/dialog_button_size"
                android:textStyle="bold"
                android:visibility="visible" />


        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
