<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/my_background">
    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar"
        android:layout_centerInParent="true">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_margin="8dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView android:layout_marginTop="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher_about" />

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/baloobhai"
                    android:singleLine="true"
                    android:text="@string/version_contact"
                    android:textColor="?attr/my_textColor"
                    android:textSize="9sp" />

                <LinearLayout
                    android:id="@+id/ll_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/nav_header_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:padding="0dp"
                        android:text="@string/app_name"
                        android:textColor="?attr/my_textColor"
                        android:textSize="32sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="42dp"
                    android:background="@drawable/about_bg"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/disclaimer_txt"
                        android:fontFamily="@font/baloobhai"
                        android:textColor="?attr/my_textColor"
                        android:textSize="12sp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/baloobhai"
                        android:layout_marginTop="6dp"
                        android:text="@string/about_disclaimer"
                        android:textColor="?attr/my_textColor"
                        android:textSize="13sp" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/txt_privacy_policy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/menu_policy"
                        android:fontFamily="@font/baloobhai"
                        android:textColor="?attr/my_textColor"
                        android:textSize="14sp" />

                   <!-- <view android:visibility="gone"
                        android:layout_width="@dimen/margin_1dp" android:background="@color/main_text_color"
                        android:layout_height="match_parent"></view>-->

                    <TextView
                        android:id="@+id/txt_terms"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:visibility="gone"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/termofuse"
                        android:textColor="?attr/my_textColor"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>


</RelativeLayout>
